# C_Nchronise-library

./: CMakeLists.txt  READEME.md
include/: C_Nchronise.hpp
tests/: test_synchronize.cpp
